// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Meetings/Webex Interstitial Meeting Loading 1`] = `
Array [
  <div
    className="wxc wxc-interstitial-meeting"
    style={
      Object {
        "height": "100%",
        "width": "100%",
      }
    }
  >
    <div
      className="wxc wxc-spinner"
      style={
        Object {
          "height": 30,
          "width": 30,
        }
      }
    />
  </div>,
  <video
    autoPlay={true}
    height="0"
    id="remote-video"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-meeting.mp4"
    width="0"
  />,
  <video
    autoPlay={true}
    height="0"
    id="remote-share"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-share.mp4"
    width="0"
  />,
]
`;

exports[`Storyshots Meetings/Webex Interstitial Meeting Video Disabled 1`] = `
Array [
  <div
    className="wxc wxc-interstitial-meeting"
    style={
      Object {
        "height": "100%",
        "width": "100%",
      }
    }
  >
    <div
      className="wxc-interstitial-meeting__media-container"
      style={
        Object {
          "maxWidth": "none",
        }
      }
    >
      <div
        className="wxc wxc-meeting-info wxc-interstitial-meeting__info"
      >
        <h2
          className="wxc-meeting-info__title"
        >
          Video Disabled
        </h2>
      </div>
      <div
        className="wxc-interstitial-meeting__interstitial-media-container"
      >
        <div
          className="wxc wxc-local-media wxc-interstitial-meeting__media wxc-local-media--no-media"
        >
          <div
            className="wxc wxc-avatar"
          >
            <div
              className="wxc-avatar__content"
            >
              <svg
                className="wxc-avatar__placeholder wxc-avatar__placeholder-6"
                viewBox="0 0 40 40"
              >
                <text
                  x="50%"
                  y="50%"
                >
                  BG
                </text>
              </svg>
              <img
                alt="avatar"
                className="wxc-avatar__image"
                onError={[Function]}
                src="./images/barbara.png"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <video
    autoPlay={true}
    height="0"
    id="remote-video"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-meeting.mp4"
    width="0"
  />,
  <video
    autoPlay={true}
    height="0"
    id="remote-share"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-share.mp4"
    width="0"
  />,
]
`;

exports[`Storyshots Meetings/Webex Interstitial Meeting Video Enabled 1`] = `
Array [
  <div
    className="wxc wxc-interstitial-meeting"
    style={
      Object {
        "height": "100%",
        "width": "100%",
      }
    }
  >
    <div
      className="wxc-interstitial-meeting__media-container"
      style={
        Object {
          "maxWidth": "none",
        }
      }
    >
      <div
        className="wxc wxc-meeting-info wxc-interstitial-meeting__info"
      >
        <h2
          className="wxc-meeting-info__title"
        >
          Interstitial
        </h2>
      </div>
      <div
        className="wxc-interstitial-meeting__interstitial-media-container"
      >
        <div
          className="wxc wxc-local-media wxc-interstitial-meeting__media wxc-local-media--no-media"
        >
          <div
            className="wxc wxc-avatar"
          >
            <div
              className="wxc-avatar__content"
            >
              <svg
                className="wxc-avatar__placeholder wxc-avatar__placeholder-6"
                viewBox="0 0 40 40"
              >
                <text
                  x="50%"
                  y="50%"
                >
                  BG
                </text>
              </svg>
              <img
                alt="avatar"
                className="wxc-avatar__image"
                onError={[Function]}
                src="./images/barbara.png"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <video
    autoPlay={true}
    height="0"
    id="remote-video"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-meeting.mp4"
    width="0"
  />,
  <video
    autoPlay={true}
    height="0"
    id="remote-share"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-share.mp4"
    width="0"
  />,
]
`;
